Switching to older JDK